--- a/boba/Base.lproj/Main.storyboard
+++ b/boba/Base.lproj/Main.storyboard
@@ -24,6 +24,7 @@
                                 <state key="normal" title="Find My Location"/>
                                 <connections>
                                     <action selector="findLocation" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jhg-I5-Eph"/>
+                                    <segue destination="kbB-ka-eAW" kind="show" identifier="locationToHome" id="z19-I8-676"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -36,6 +37,121 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="242" y="33"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="0yc-dV-Ot6">
+            <objects>
+                <viewController id="Z6B-7I-jRc" customClass="HomeViewController" customModule="boba" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QoU-me-5FX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rf5-zf-zSv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeCell" rowHeight="250" id="ofA-xb-Ifi" userLabel="homeCell" customClass="HomeCell" customModule="boba" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ofA-xb-Ifi" id="6Po-HQ-Ta2">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gNq-RU-XAf">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="AVM-WL-3NU"/>
+                                                        <constraint firstAttribute="width" constant="345" id="USV-f1-GwL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lk1-Kr-K5U">
+                                                    <rect key="frame" x="15" y="130" width="198" height="40"/>
+                                                    <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzg-Qq-3hT">
+                                                    <rect key="frame" x="15" y="167" width="198" height="29"/>
+                                                    <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vEa-Pn-zfy">
+                                                    <rect key="frame" x="15" y="195" width="243" height="47"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NhR-ub-Onr">
+                                                    <rect key="frame" x="301" y="215" width="59" height="27"/>
+                                                    <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="18"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lk1-Kr-K5U" firstAttribute="leading" secondItem="6Po-HQ-Ta2" secondAttribute="leadingMargin" id="0al-UK-0xF"/>
+                                                <constraint firstItem="lk1-Kr-K5U" firstAttribute="top" secondItem="gNq-RU-XAf" secondAttribute="bottom" constant="2" id="2pA-Wh-aVp"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="bzg-Qq-3hT" secondAttribute="trailing" constant="147" id="Akr-Sn-FL0"/>
+                                                <constraint firstItem="bzg-Qq-3hT" firstAttribute="leading" secondItem="6Po-HQ-Ta2" secondAttribute="leadingMargin" id="G1a-vi-Rh1"/>
+                                                <constraint firstItem="NhR-ub-Onr" firstAttribute="top" secondItem="gNq-RU-XAf" secondAttribute="bottom" constant="87" id="G3t-JN-aLX"/>
+                                                <constraint firstItem="vEa-Pn-zfy" firstAttribute="top" secondItem="lk1-Kr-K5U" secondAttribute="bottom" constant="25" id="JJD-cy-wnU"/>
+                                                <constraint firstAttribute="trailing" secondItem="NhR-ub-Onr" secondAttribute="trailing" constant="15" id="P5G-WM-NxN"/>
+                                                <constraint firstItem="gNq-RU-XAf" firstAttribute="leading" secondItem="6Po-HQ-Ta2" secondAttribute="leading" constant="15" id="Psv-a6-RO6"/>
+                                                <constraint firstItem="lk1-Kr-K5U" firstAttribute="top" secondItem="gNq-RU-XAf" secondAttribute="bottom" constant="2" id="RTB-Hy-SB0"/>
+                                                <constraint firstItem="vEa-Pn-zfy" firstAttribute="leading" secondItem="6Po-HQ-Ta2" secondAttribute="leading" constant="15" id="UKb-1k-nCG"/>
+                                                <constraint firstItem="NhR-ub-Onr" firstAttribute="leading" secondItem="vEa-Pn-zfy" secondAttribute="trailing" constant="43" id="W9D-sQ-2HV"/>
+                                                <constraint firstAttribute="bottom" secondItem="vEa-Pn-zfy" secondAttribute="bottom" constant="7.5" id="Xao-fO-n5v"/>
+                                                <constraint firstItem="gNq-RU-XAf" firstAttribute="top" secondItem="6Po-HQ-Ta2" secondAttribute="top" id="Y2Y-su-fID"/>
+                                                <constraint firstAttribute="trailing" secondItem="gNq-RU-XAf" secondAttribute="trailing" constant="15" id="Z5c-l1-pct"/>
+                                                <constraint firstItem="bzg-Qq-3hT" firstAttribute="leading" secondItem="6Po-HQ-Ta2" secondAttribute="leadingMargin" id="eKc-ol-QBk"/>
+                                                <constraint firstAttribute="bottom" secondItem="NhR-ub-Onr" secondAttribute="bottom" constant="7.5" id="gEA-1f-VOp"/>
+                                                <constraint firstItem="bzg-Qq-3hT" firstAttribute="top" secondItem="gNq-RU-XAf" secondAttribute="bottom" constant="39" id="udZ-Ic-JoL"/>
+                                                <constraint firstAttribute="trailing" secondItem="vEa-Pn-zfy" secondAttribute="trailing" constant="117" id="xY2-i7-OPL"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lk1-Kr-K5U" secondAttribute="trailing" constant="147" id="xzp-hy-oRF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="distanceFrom" destination="NhR-ub-Onr" id="aMO-mJ-ha9"/>
+                                            <outlet property="location" destination="bzg-Qq-3hT" id="H6W-3d-Daj"/>
+                                            <outlet property="nameOfPlace" destination="lk1-Kr-K5U" id="Mfw-uc-Ytr"/>
+                                            <outlet property="ratings" destination="vEa-Pn-zfy" id="VsM-rl-ZhS"/>
+                                            <outlet property="thumbnail" destination="gNq-RU-XAf" id="ISF-wk-qyj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rf5-zf-zSv" firstAttribute="top" secondItem="QoU-me-5FX" secondAttribute="top" id="51T-2B-TFu"/>
+                            <constraint firstItem="rf5-zf-zSv" firstAttribute="trailing" secondItem="GC3-uD-kxW" secondAttribute="trailing" id="arE-Eo-zsc"/>
+                            <constraint firstItem="rf5-zf-zSv" firstAttribute="bottom" secondItem="GC3-uD-kxW" secondAttribute="bottom" id="cwe-CK-sia"/>
+                            <constraint firstItem="rf5-zf-zSv" firstAttribute="leading" secondItem="GC3-uD-kxW" secondAttribute="leading" id="qh4-wL-dLM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GC3-uD-kxW"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="uR2-QB-2a4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e5W-ui-g1o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2023.2" y="32.833583208395808"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mcf-dh-34k">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kbB-ka-eAW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="T4c-EW-fa7">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Z6B-7I-jRc" kind="relationship" relationship="rootViewController" id="xZi-ue-RkO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gcf-h5-aBx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="32.833583208395808"/>
         </scene>
     </scenes>
 </document>
